--- a/.github/workflows/build_windows_artifacts.yml
+++ b/.github/workflows/build_windows_artifacts.yml
@@ -85,30 +85,60 @@ jobs:
       TEATIME_FORCE_INTERACTIVE: 0
       AMDGPU_FAMILIES: ${{ inputs.amdgpu_families }}
       IS_PR_FROM_FORK: ${{ github.event.pull_request.head.repo.fork }}
-      THEROCK_DIR: ${{ inputs.external_source_checkout && 'TheRock' || '.' }}
+      THEROCK_DIR: ${{ inputs.external_source_checkout && 'therock-ci' || '.' }}
     steps:
       - name: "Checking out repository"
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        with:
+          repository: ${{ inputs.external_source_checkout && inputs.repository_override || github.repository }}
+          path: ${{ inputs.external_source_checkout && 'source-repo' || '.' }}
 
       - name: Checkout TheRock repository
         if: ${{ inputs.external_source_checkout }}
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           repository: "ROCm/TheRock"
-          path: TheRock
+          path: therock-ci
           ref: ${{ inputs.therock_ref || 'main' }}
 
-      - name: Auto-detect external source configuration
+      - name: Verify TheRock checkout
         if: ${{ inputs.external_source_checkout }}
-        id: detect
-        run: python3 $THEROCK_DIR/build_tools/github_actions/detect_external_repo_config.py "${{ inputs.repository_override || github.repository }}" --workspace "${{ github.workspace }}"
-
-      - name: Checkout composable_kernel repository
-        if: ${{ inputs.external_source_checkout && steps.detect.outputs.enable_ck == 'true' }}
-        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-        with:
-          repository: "ROCm/composable_kernel"
-          path: "composable_kernel"
+        run: |
+          echo "=== Verifying TheRock checkout ==="
+          echo "THEROCK_DIR: $THEROCK_DIR"
+          echo "Current working directory: $(pwd)"
+          echo ""
+          echo "=== Directory listing of workspace root ==="
+          ls -la
+          echo ""
+          echo "=== Checking if TheRock directory exists ==="
+          if [ -d "$THEROCK_DIR" ]; then
+            echo "✓ TheRock directory exists"
+            echo ""
+            echo "=== Contents of TheRock directory ==="
+            ls -la $THEROCK_DIR/
+            echo ""
+            echo "=== Checking for build_tools directory ==="
+            if [ -d "$THEROCK_DIR/build_tools" ]; then
+              echo "✓ build_tools directory exists"
+              echo ""
+              echo "=== Checking for detect_external_repo_config.py ==="
+              if [ -f "$THEROCK_DIR/build_tools/github_actions/detect_external_repo_config.py" ]; then
+                echo "✓ detect_external_repo_config.py exists"
+              else
+                echo "✗ ERROR: detect_external_repo_config.py NOT FOUND"
+                echo "Contents of build_tools/github_actions/:"
+                ls -la $THEROCK_DIR/build_tools/github_actions/ || echo "Directory does not exist"
+                exit 1
+              fi
+            else
+              echo "✗ ERROR: build_tools directory NOT FOUND"
+              exit 1
+            fi
+          else
+            echo "✗ ERROR: TheRock directory NOT FOUND"
+            exit 1
+          fi
 
       - uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548 # v6.1.0
         with:
@@ -117,6 +147,28 @@ jobs:
       - name: Install python deps
         run: |
           pip install -r $THEROCK_DIR/requirements.txt
+
+      - name: Auto-detect external source configuration
+        if: ${{ inputs.external_source_checkout }}
+        id: detect
+        run: python3 $THEROCK_DIR/build_tools/github_actions/detect_external_repo_config.py "${{ inputs.repository_override || github.repository }}"
+
+      - name: Debug detected configuration
+        if: ${{ inputs.external_source_checkout }}
+        run: |
+          echo "Detected cmake_source_var: ${{ steps.detect.outputs.cmake_source_var }}"
+          echo "Detected patches_dir: ${{ steps.detect.outputs.patches_dir }}"
+          echo "Detected fetch_exclusion: ${{ steps.detect.outputs.fetch_exclusion }}"
+          echo "GitHub workspace: ${{ github.workspace }}"
+          echo "Source repo will be at: ${{ github.workspace }}/source-repo"
+          echo "Will construct CMake option: -D${{ steps.detect.outputs.cmake_source_var }}=${{ github.workspace }}/source-repo"
+
+      - name: Checkout composable_kernel repository
+        if: ${{ inputs.external_source_checkout && steps.detect.outputs.enable_ck == 'true' }}
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        with:
+          repository: "ROCm/composable_kernel"
+          path: "composable_kernel"
 
       - name: Install requirements
         # The first two lines removes the default commmunity feed and uses the internal proxy feed
@@ -146,8 +198,16 @@ jobs:
           ccache --zero-stats
           python $THEROCK_DIR/build_tools/health_status.py
 
+      - name: Adjust git config
+        working-directory: ${{ inputs.external_source_checkout && 'source-repo' || '.' }}
+        run: |
+          git config fetch.parallel 10
+          git config --global core.symlinks true
+          git config --global core.longpaths true
+
       - name: DVC pull
         if: ${{ inputs.external_source_checkout && steps.detect.outputs.enable_dvc == 'true' }}
+        working-directory: source-repo
         run: dvc pull
 
       # TODO: We shouldn't be using a cache on actual release branches, but it
@@ -163,9 +223,6 @@ jobs:
       - name: Fetch sources
         timeout-minutes: 30
         run: |
-          git config fetch.parallel 10
-          git config --global core.symlinks true
-          git config --global core.longpaths true
           if [[ "${{ inputs.external_source_checkout }}" == "true" ]]; then
             python $THEROCK_DIR/build_tools/fetch_sources.py --jobs 12 --no-include-ml-frameworks ${{ steps.detect.outputs.fetch_exclusion }}
           else
@@ -174,9 +231,10 @@ jobs:
 
       - name: Patch external repo
         if: ${{ inputs.external_source_checkout }}
+        working-directory: source-repo
         run: |
           # Apply patches from TheRock to the external repo
-          PATCHES_DIR="$THEROCK_DIR/patches/amd-mainline/${{ steps.detect.outputs.patches_dir }}"
+          PATCHES_DIR="../$THEROCK_DIR/patches/amd-mainline/${{ steps.detect.outputs.patches_dir }}"
           if [ -d "$PATCHES_DIR" ] && [ "$(ls -A $PATCHES_DIR/*.patch 2>/dev/null)" ]; then
             git -c user.name="therockbot" -c "user.email=therockbot@amd.com" \
               am --whitespace=nowarn $PATCHES_DIR/*.patch
@@ -195,7 +253,7 @@ jobs:
           amdgpu_families: ${{ inputs.amdgpu_families }}
           package_version: ${{ inputs.package_version }}
           extra_cmake_options: >-
-            ${{ inputs.external_source_checkout && steps.detect.outputs.extra_cmake_options || '' }}
+            ${{ inputs.external_source_checkout && format('-D{0}=../source-repo', steps.detect.outputs.cmake_source_var) || '' }}
             ${{ inputs.extra_cmake_options }}
         run: |
           # clear cache before build and after download
