--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,22 @@ on:
         type: string
         description: "Override: comma-separated list of project paths to test (e.g., 'projects/rocprim,projects/hipcub'). Leave blank for normal behavior (auto-detect from PR changes). Use 'all' to test all projects."
         default: ""
+      linux_amdgpu_families:
+        type: string
+        description: "Insert comma-separated list of Linux GPU families to build and test. ex: gfx94X, gfx1201X"
+        default: ""
+      windows_amdgpu_families:
+        type: string
+        description: "Insert comma-separated list of Windows GPU families to build and test. ex: gfx94X, gfx1201X"
+        default: ""
+      linux_test_labels:
+        type: string
+        description: "Limit Linux tests to specific labels (e.g., 'test:rocprim,test:hipcub'). Blank = run all detected tests."
+        default: ""
+      windows_test_labels:
+        type: string
+        description: "Limit Windows tests to specific labels (e.g., 'test:rocprim,test:hipcub'). Blank = run all detected tests."
+        default: ""
   pull_request:
     types:
       - labeled
@@ -77,9 +93,9 @@ concurrency:
   # A PR number if a pull request and otherwise the commit hash. This cancels
   # queued and in-progress runs for the same PR (presubmit) or commit
   # (postsubmit). The workflow name is prepended to avoid conflicts between
-  # different workflows. Repository name is included to prevent conflicts when
-  # external repos (rocm-libraries, rocm-systems) call this workflow.
-  group: ${{ github.workflow }}-${{ github.repository }}-${{ github.event.number || github.sha }}
+  # different workflows. Repository override is included to allow parallel
+  # external repo integration tests (rocm-libraries, rocm-systems).
+  group: ${{ github.workflow }}-${{ inputs.repository_override || github.repository }}-${{ github.event.number || github.sha }}
   cancel-in-progress: true
 
 jobs:
@@ -91,6 +107,10 @@ jobs:
       therock_ref: ${{ inputs.therock_ref || '' }}
       repository_override: ${{ inputs.repository_override || '' }}
       projects: ${{ inputs.projects || '' }}
+      linux_amdgpu_families: ${{ inputs.linux_amdgpu_families || '' }}
+      windows_amdgpu_families: ${{ inputs.windows_amdgpu_families || '' }}
+      linux_test_labels: ${{ inputs.linux_test_labels || '' }}
+      windows_test_labels: ${{ inputs.windows_test_labels || '' }}
 
   linux_build_and_test:
     name: Linux::${{ matrix.variant.family }}::${{ matrix.variant.build_variant_label }}
